centeres log in wrappe in center fixed

--- a/styles/sign_up.css
+++ b/styles/sign_up.css
@@ -28,6 +28,15 @@
     --Margin-RL-L: 15px;
 }
 
+.inner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1920px;
+    min-height: 100vh;
+    border: 5px dashed rgb(152, 30, 117);
+}
+  
 .log-in-wrapper,
 .Form-Wrapper {
     @media (max-width: 700px) {
@@ -40,12 +49,9 @@
 }
 
 .Body-LogIn {
+    margin: 0;
+    padding: 0;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 16px;
     @media (max-width: 900px) {
         margin: 0;
     }
